# _data-engineering-on-gcp_

./: README.md
01-introduction-to-data-engineering/: _load_from_.txt  extract.py  fetch.sh  load.sh
03-setting-up-data-lake-using-google-cloud-storage/: load_data_to_gcs_then_bigquery.py  main.py  pyproject.toml
04-building-data-pipelines-with-apache-airflow-cloud-composer/mnt/dags/: _template_dag.py  avg_weekly_baskets_model_training.py  breakfast_product_pipeline.py  breakfast_stores_pipeline.py  breakfast_transaction_pipeline.py  deploy.py  dog_api_pipeline.py  ga_transaction_model_training.py  my_first_dag.py  my_second_dag.py
05-data-visualization-with-looker-studio/: Tor.txt
my-streamlit-app/: main_titanic_test_ui.py  pyproject.toml
proj-titanic-survivor-prediction/: import.py  main.py  main_.py  pyproject.toml
proj-titanic-survivor-prediction/airflow/: docker-compose.yaml
proj-titanic-survivor-prediction/airflow/mnt/dags/: _template_dag.py  titanic_from_msql2bigquery_pipeline.py  titanic_survivor_predictor_modeling.py
proj_clustering/: import.py  main.py  pyproject.toml
proj_clustering/airflow/mnt/dags/: clustering_from_msql2bigquery_pipeline.py  customer_cluster_modeling.py  test_customer_cluster_modeling.py
proj_for_team/: main.py  pyproject.toml
proj_for_team/airflow/mnt/dags/: clean_clustering.csv  clustering_from_msql2bigquery_pipeline.py  customer_cluster_modeling.py
proj_for_team/airflow/mnt/logs/scheduler/: latest
test_09_03_netflix/: import.py  pyproject.toml
test_09_03_netflix/airflow/mnt/dags/: Netflix_Userbase_utf_already_preprocessed_dates.csv  netflix_predictor_modeling.py  nexflix_from_msql2bigquery_pipeline.py
